# LocalScripts_AI

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_PERFORMANCE.md  CHANGES_SUMMARY.md  Dockerfile  Dockerfile.optimized  Dockerfile.sandbox  FINAL_SUMMARY.md  MTS_HACKATHON.md  Makefile  NEW_AGENTS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PRESENTATION.md  PROGRESS.md  QUICKSTART_SMALL_MODELS.md  README.md  README_DEMO.md  REALTIME_INFERENCE_SUMMARY.md  SMALL_MODEL_OPTIMIZATION.md  SUMMARY_SMALL_MODELS.md  TESTING_CHECKLIST.md  docker-compose.yml  main.py  pyproject.toml  rebuild_rag.py  requirements.txt  test_buttons.html  test_cases.txt  test_clarifier.py  test_frontend.html  test_interactive.py  test_lowcode_tasks.py  test_public_tasks.py  test_public_tasks_fast.py  test_rag_impact.py  test_rag_integration.py  test_rag_quick.py  (+5 more)
agents/: __init__.py  approver.py  architect.py  base.py  checkpoint.py  clarifier.py  decomposer.py  evolver.py  generator.py  integrator.py  retriever.py  reviewer.py  specification.py  test_generator.py  validator.py
api/: __init__.py  models.py  routes.py  server.py
config/: agents.yaml  agents_lowcode.yaml  agents_small.yaml  loader.py  settings.yaml
docs/: APPROVER_HANGING_FIX.md  CACHE_CLEAR.md  DOCKER.md  ENCODING_FIX.md  FRONTEND_FINAL_REPORT.md  FRONTEND_INFERENCE_TIMELINE_IMPROVEMENTS.md  FRONTEND_RAG_INTEGRATION.md  FRONTEND_REVIEW_COMPLETE.md  INTERACTIVE_FEATURES.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_QUICK_START.md  RAG_INTEGRATION_COMPLETE.md  RAG_QUICKSTART.md  REALTIME_INFERENCE_VIEWER.md  (+13 more)
(+164 files in other folders)
